Fixed toc behavior on smaller screens.

--- a/_sass/_toc.scss
+++ b/_sass/_toc.scss
@@ -50,8 +50,10 @@
       color: $text-color;
     }
   }
-  &.right {
-      float: right;
+  @include media($medium) {
+      &.right {
+          float: right;
+      }
   }
 }
 
